--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ ExtendedWebView.xcodeproj/project.xcworkspace/xcuserdata/mwfire.xcuserdatad/User
 .DS_Store
 .settings
 .project
+iphone/ExtWebView.xcodeproj/project.xcworkspace/xcuserdata/mwfire.xcuserdatad/UserInterfaceState.xcuserstate
